# turing-research-agent

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base.py  clarity.py  research.py  synthesis.py  validator.py
backend/app/api/: routes.py  schemas.py
backend/app/data/: mock_companies.py
backend/app/graph/: __init__.py  builder.py  checkpointer.py  routing.py  state.py
backend/app/services/: chat_service.py
backend/app/tools/: research_tool.py
backend/examples/: demo_conversation.py
backend/tests/: conftest.py  test_agents.py  test_graph_e2e.py  test_mock_data.py  test_routing.py  test_state.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AgentTimeline.tsx  ClarificationBanner.tsx  ComposerInput.tsx  DevInspector.tsx  GraphTopology.tsx  Header.tsx  MessageBubble.tsx  SuggestedQueries.tsx  ThinkingBubble.tsx  ValidatorFeedback.tsx
frontend/src/store/: chat.ts
